www/css/style.css
/* Empty. Add your own CSS if you like */
ion-header-bar {
  background-color: #00a19c !important;
}

button.button.back-button.buttons.button-clear.header-item {
  color: white !important;
}

.bar.bar-stable .title {
  color: white !important;
}

.home-page {
  background-color: #00a19c;
  background-image: url(../img/home-page.png);
  background-repeat: no-repeat;
  background-position: center center;
  padding-top: 320px;
}

.album-cover {
  display:block;
  width: 90%;
  max-width: 300px;
  height: 300px;
  background-color: #eee;
  background-image: url(../img/default600.jpg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  overflow: hidden;
  position: relative;
  margin: 20px auto 20px auto;
}

.album-overlay {
  background-color: rgba(0,0,0,0.5);
  padding: 10px;
  color: white;
  text-shadow: black 1px 1px;
  position: absolute;
  bottom: 0px;
  width: 100%;
}

.album-name {
  font-weight: bold;
  width: 100%;
  overflow-x: ellipsis;
}

.album-venue {
  font-size: 8pt;
}

.album-distance {
  font-size: 8pt;
}

.album-countdown {
  float: right;
}

#photo-canvas {
  z-index: 8888;
}

.camera-button {
  position: absolute;
  z-index: 9998;
  bottom: 40px;
  font-size: 36pt;
  color: white;
  text-shadow: black 1px 1px;
}

.photo-overlay {
  position: absolute;
  z-index: 9999;
  bottom: 0px;
  width: 100%;
  background-color: rgba(0,0,0,0.5);
  color: white;
}

.icon-container {
  float: left;
  width: 40px;
  text-align: center;
  margin-top: 0.5em;
}

.photo-overlay i.ionicon {
  text-align: center;
  font-size: 21pt;
  -webkit-transition: 0.5s linear all;
  -moz-transition: 0.5s linear all;
  -ms-transition: 0.5s linear all;
  -o-transition: 0.5s linear all;
  transition: 0.5s linear all;
}

.center {
  text-align: center;
}

.ng-hide-add {
  height: 43px;
  -webkit-transition: 0.5s linear all;
  -moz-transition: 0.5s linear all;
  -ms-transition: 0.5s linear all;
  -o-transition: 0.5s linear all;
  transition: 0.5s linear all;
}

.ng-hide-add-active {
  height: 0px;
}

.ng-hide-remove {
  height: 0px;
  -webkit-transition: 0.5s linear all;
  -moz-transition: 0.5s linear all;
  -ms-transition: 0.5s linear all;
  -o-transition: 0.5s linear all;
  transition: 0.5s linear all;
}

.ng-hide-remove-active {
  height: 43px;
}

.ng-enter {
  opacity: 0;
  -webkit-transition: 0.5s linear all;
  -moz-transition: 0.5s linear all;
  -ms-transition: 0.5s linear all;
  -o-transition: 0.5s linear all;
  transition: 0.5s linear all;
}

.ng-enter-active {
  opacity: 1;
}

.ng-leave {
  opacity: 1;
  width: 40px;
  -webkit-transition: 0.5s linear all;
  -moz-transition: 0.5s linear all;
  -ms-transition: 0.5s linear all;
  -o-transition: 0.5s linear all;
  transition: 0.5s linear all;

}

.ng-leave-active {
  opacity: 0;
  width: 0px;
}

